# django-console

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-bake.hcl  docker-compose.yml  entrypoint.sh  main.py  manage.py  pyproject.toml
adapter/config/: loader.py  model.py
adapter/di/: container.py
adapter/http/django/: asgi.py  audit_views.py  auth_views.py  config.py  dependencies.py  export_views.py  forms.py  job_views.py  presenters.py  profile_views.py  runtime.py  segment_views.py  settings.py  urls.py  view_models.py  views.py  wsgi.py
adapter/http/django/templates/backoffice/: audit.html  error.html  export_create.html  jobs.html  profile.html  profiles.html  segment_members.html  segments.html  unavailable.html
adapter/http/fastapi/: app.py  dependencies.py  lifespan.py  middleware.py  schemas.py
adapter/observability/: factory.py  logging.py  noop.py  runtime.py
adapter/otel/: bootstrap.py  logging.py  metrics.py  tracing.py
config/: app.yaml  otel-collector.yaml
domain/: audit.py  error.py  export_job.py  profile.py  query.py  segment.py  system_status.py  user.py
repository/: user.py
repository/core_api/: audit.py  client.py  dto.py  errors.py  export.py  job.py  mock_client.py  profile.py  segment.py  system.py  system_status.py
repository/django/: admin.py  apps.py  audit_log.py  dto.py  models.py  user.py
repository/django/migrations/: 0001_initial.py  0002_auditentryrecord.py
test/: test_core_api_client_otel.py
usecase/: audit.py  dto.py  export_job.py  interface.py  profile.py  segment.py  system.py  user.py
(+3 files in other folders)
